# mcp-audit

./: .claude-settings.json  .envrc  .gitignore  .gpm.yml  .mcp.cloudflare.json  .mcp.full.json  .mcp.lean.json  .mcp.research.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  analyze-mcp-efficiency.py  base_tracker.py  claude_code_adapter.py  codex_cli_adapter.py  data.json  demo.tape  investigate-codex-format.py  live-cc-session-tracker.py  live-codex-session-tracker.py  live-session-tracker.sh  llms.txt  mcp-analyze.toml  mcp-audit.toml  mcp_analyze_cli.py  model-pricing.json  mypy.ini  normalization.py  pricing_config.py  privacy.py  pyproject.toml  requirements-dev.txt  requirements.txt  session_manager.py  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_support.md
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  publish-mcp-audit-deprecation.yml  publish.yml  release-both.yml  socket.yml  validate-sync.yml
backlog/: config.yml
backlog/tasks/: task-1 - Phase-1-Foundation-&-Restructure-(Weeks-1-3).md  task-1 - Test-backlog.md-integration.md  task-1.1 - Week-1-Code-Restructure.md  task-1.1.1 - Fix-remaining-6-test-failures.md  task-1.2 - Week-2-Repository-Setup-&-Core-Configuration.md  task-1.3 - Week-3-Core-Documentation-&-Data-Architecture.md  task-10 - Update-README-with-shields.io-badges-and-documentation-improvements.md  task-11 - Add-GitHub-topics-to-mcp-audit-repository.md  task-12 - Update-CLAUDE.md-with-PR-merge-approval-requirement.md  task-13 - Add-comprehensive-public-documentation-to-docs.md  task-14 - Context-Bloat-Sources-Analysis.md  task-15 - Context-Slices-Data-Model.md  task-16 - Static-MCP-Server-Footprint-Analyzer.md  task-17 - Context-Categories-in-Reports.md  task-18 - What-If-Simulations.md  task-19 - Cache-Efficiency-Drilldown.md  task-2 - Phase-2-Public-Beta-Release-(Weeks-4-6).md  task-2.1 - Week-4-Beta-Preparation-&-PyPI-Launch.md  task-2.2 - Week-5-Community-Launch.md  task-2.2.1 - Messaging-&-README-Refresh-for-Community-Launch.md  task-2.3 - Week-6-Beta-Iteration-&-User-Value.md  task-20 - Per-File-Context-Usage-Tracking.md  task-21 - Context-Saturation-&-Compression-Metrics.md  task-22 - Cross-Platform-Comparison.md  task-23 - MCP-Authoring-Hints.md  task-24 - Compaction-Tracking.md  task-25 - Starting-Context-Tracking.md  task-26 - Focus-Server-Mode.md  task-27 - Clean-up-stale-feature-branches.md  task-28 - Enable-branch-protection-on-main.md  task-3 - Phase-3-Platform-Expansion-(Weeks-7-12).md  task-3.1 - Weeks-7-8-Gemini-CLI-Integration.md  task-3.2 - Weeks-9-10-Ollama-CLI-Integration.md  task-3.3 - Week-11-Programmatic-API-&-Plugin-System.md  task-3.4 - Week-12-v1.0-Release-Preparation.md  task-4 - Phase-4-Distribution-(Weeks-13-14).md  task-4.1 - Weeks-13-14-Additional-Distribution-Channels-&-Sustainability.md  task-5 - Phase-5-Community-Growth-(Ongoing).md  task-6 - Gemini-CLI-Integration-(OpenTelemetry-based).md  task-7 - Gemini-CLI-Production-Testing.md  (+2 more)
docs/: CLAUDE-MD-IMPROVEMENT-PLAN.md  CLAUDE-MD-RESTRUCTURING-COMPLETE.md  CODEX-CLAUDE-FORMAT-DIFFERENCES.md  CODEX-MCP-TRACKING-IMPLEMENTATION.md  CORE-SCHEMA-SPEC.md  ENHANCEMENTS-5-8-SUMMARY.md  FEATURES-BENEFITS.md  GEMINI-CLI-INTEGRATION.md  GPM-CI-INTEGRATION-PLAN.md  INTERCEPTION-MECHANISM-SPEC.md  MCP-EFFICIENCY-CODE-ANALYSIS.md  MCP-EFFICIENCY-MEASUREMENT-PLAN.md  MCP-EFFICIENCY-PLAN-UPDATES.md  PLATFORM-TOKEN-CAPABILITIES.md  PRICING-CONFIGURATION.md  ROADMAP.md  TUI-IMPLEMENTATION-PLAN.md  WEEK-2-REPOSITORY-ANALYSIS.md  ai-export-schema.md  architecture.md  codex-cli-setup.md  data-contract.md  demo.tape  features-benefits.md  features.md  gemini-cli-setup.md  gemma-tokenizer-license.md  manual-tokenizer-install.md  mcp-audit-multimodel-prompt.md  mcp-server-guide.md  multi-cli-platform-support.md  privacy-security.md  troubleshooting.md  tui-guide.md  v1-session-schema.md
docs/ideas/: RECOMMENDATIONS.md  idea-cache-efficiency-drilldown.md  idea-compaction-tracking.md  idea-compression-metrics.md  idea-context-bloat-sources.md  idea-context-categories-reports.md  idea-context-slices-data-model.md  idea-cross-platform-comparison.md  idea-focus-server-mode.md  idea-mcp-authoring-hints.md  idea-per-file-context-usage.md  idea-starting-context-tracking.md  idea-static-mcp-footprint-analyzer.md  (+1 more)
examples/: README.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1b9d92d4521396f1___init___py.html  z_1b9d92d4521396f1_base_tracker_py.html  z_1b9d92d4521396f1_claude_code_adapter_py.html  z_1b9d92d4521396f1_cli_py.html  z_1b9d92d4521396f1_codex_cli_adapter_py.html  z_1b9d92d4521396f1_gemini_cli_adapter_py.html  z_1b9d92d4521396f1_normalization_py.html  z_1b9d92d4521396f1_preferences_py.html  z_1b9d92d4521396f1_pricing_api_py.html  z_1b9d92d4521396f1_pricing_config_py.html  z_1b9d92d4521396f1_privacy_py.html  z_1b9d92d4521396f1_recommendations_py.html  z_1b9d92d4521396f1_schema_analyzer_py.html  z_1b9d92d4521396f1_session_manager_py.html  z_1b9d92d4521396f1_smell_aggregator_py.html  z_1b9d92d4521396f1_smells_py.html  z_1b9d92d4521396f1_storage_py.html  z_1b9d92d4521396f1_token_estimator_py.html  z_1b9d92d4521396f1_zombie_detector_py.html  z_d27cf0dc95f72cf4___init___py.html  z_d27cf0dc95f72cf4_ascii_mode_py.html  z_d27cf0dc95f72cf4_base_py.html  z_d27cf0dc95f72cf4_keyboard_py.html  z_d27cf0dc95f72cf4_null_display_py.html  z_d27cf0dc95f72cf4_plain_display_py.html  z_d27cf0dc95f72cf4_rich_display_py.html  z_d27cf0dc95f72cf4_session_browser_py.html  z_d27cf0dc95f72cf4_snapshot_py.html  z_d27cf0dc95f72cf4_theme_detect_py.html  z_d27cf0dc95f72cf4_themes_py.html
quickref/: architecture.md  commands.md  features.md  integration.md  messaging.md  troubleshooting.md
tests/: conftest.py  test_base_tracker.py  test_display.py  test_gemini_cli_adapter.py  test_integration.py  test_normalization.py  test_pricing_config.py  test_privacy.py  test_session_manager.py  test_storage.py
(+38 files in other folders)
